BIG Primer comitt real feat: Implement student marks management with CRUD operations
- Added StudentMarkController for handling student marks API requests.
- Created StudentMark entity to represent student marks in the database.
- Developed StudentMarkService for business logic related to student marks.
- Introduced StudentMarkRepository for data access operations on student marks.
- Implemented StudentMarkMapper for converting between StudentMark entity and DTO.
- Added Enrollment entity and related repository, service, and mapper for enrollment management.
- Created QuizResponse entity and corresponding repository, service, and mapper for quiz responses.
- Developed DiscountCoupon and Payment entities with their respective repositories, services, and mappers.
- Implemented support ticket management with SupportTicket entity, repository, service, and controller.
- Integrated UserClient for user-related operations across services.

--- a/ms-courses/pom.xml
+++ b/ms-courses/pom.xml
@@ -98,6 +98,12 @@
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency> 
 
+        <!-- SpringDoc OpenAPI para documentación Swagger -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+        </dependency>
+
         <!-- 
             Spring Boot DevTools: Permite recarga automática del proyecto (hot reload),
             útil solo en desarrollo. No se recomienda en producción. 
