feat: Integrate Spring HATEOAS for enhanced API responses
- Updated .vscode settings for automatic Java build configuration.
- Added Spring HATEOAS dependency to pom.xml files across multiple modules (ms-courses, ms-grades, ms-payments, ms-support, ms-users).
- Enhanced CourseCategoryController, CourseController, EnrollmentController, StudentMarkController, PaymentController, SupportTicketController, RoleController, and UserController to return HATEOAS-compliant responses.
- Implemented methods to add hypermedia links to DTOs in controllers.
- Documented API endpoints with OpenAPI annotations for better clarity and usability.

--- a/ms-courses/pom.xml
+++ b/ms-courses/pom.xml
@@ -104,6 +104,12 @@
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
         </dependency>
 
+        <!-- Spring HATEOAS para hypermedia -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-hateoas</artifactId>
+        </dependency>
+
         <!-- 
             Spring Boot DevTools: Permite recarga automática del proyecto (hot reload),
             útil solo en desarrollo. No se recomienda en producción. 
