--- a/ms-payments/pom.xml
+++ b/ms-payments/pom.xml
@@ -136,7 +136,7 @@
 		            </execution>
 		        </executions>
 		        <configuration>
-		            <mainClass>com.edutech.users.ClassroomPaymentsModuleApplication</mainClass>
+		            <mainClass>com.edutech.payments.ClassroomPaymentsModuleApplication</mainClass>
 		        </configuration>
 		        </plugin>
 		
