--- a/ms-support/pom.xml
+++ b/ms-support/pom.xml
@@ -136,7 +136,7 @@
 		            </execution>
 		        </executions>
 		        <configuration>
-		            <mainClass>com.edutech.users.ClassroomSupportModuleApplication</mainClass>
+		            <mainClass>com.edutech.support.ClassroomSupportModuleApplication</mainClass>
 		        </configuration>
 		        </plugin>
 		
