--- a/ms-users/src/main/resources/application.yml
+++ b/ms-users/src/main/resources/application.yml
@@ -1,15 +1,11 @@
 server:
   port: 9001
   error:
-    # Al seleccionar "include-stacktrace: never" no se incluirá la pila de errores en el Json
-    # que se devuelve a la aplicación cliente. Esto es necesario en un ambiente de producción,
-    # pero en desarrollo se puede eliminar esta línea. Se dejará por el momento para que
-    # los Json de retorno a Postman sean más elegantes
     include-stacktrace: never
 
 spring:
   application:
-    name: ms-users
+    name: "ms-users"
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/edutech
@@ -23,12 +19,12 @@ spring:
 
 eureka:
   client:
-    register-with-eureka: true
-    fetch-registry: true
+    register-with-eureka: false
+    fetch-registry: false
     service-url:
       defaultZone: http://localhost:8761/eureka
   instance:
     prefer-ip-address: true
     instance-id: "${spring.application.name}:${random.value}"
-    lease-renewal-interval-in-seconds: 15    # Cada cuántos segundos el cliente envía “heartbeat”
-    lease-expiration-duration-in-seconds: 60 # Después de cuántos segundos sin renovar, se considera DOWN
+    lease-renewal-interval-in-seconds: 15
+    lease-expiration-duration-in-seconds: 60
