--- a/ms-courses/src/main/resources/application.yml
+++ b/ms-courses/src/main/resources/application.yml
@@ -19,12 +19,10 @@ spring:
 
 eureka:
   client:
-    register-with-eureka: false
-    fetch-registry: false
+    register-with-eureka: true
+    fetch-registry: true
     service-url:
       defaultZone: http://localhost:8761/eureka
   instance:
     prefer-ip-address: true
     instance-id: "${spring.application.name}:${random.value}"
-    lease-renewal-interval-in-seconds: 15
-    lease-expiration-duration-in-seconds: 60
