--- a/ms-users/pom.xml
+++ b/ms-users/pom.xml
@@ -86,6 +86,13 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- H2 Database for testing -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>test</scope>
+        </dependency>
+
         <!-- 
             Dependencia para habilitar este módulo como cliente de Eureka.
             Permite que este microservicio se registre automáticamente en el servidor Eureka
