Refactor ms-grades: Align with SQL schema and complete modernization

--- a/ms-grades/pom.xml
+++ b/ms-grades/pom.xml
@@ -94,6 +94,13 @@
             <artifactId>spring-boot-starter-hateoas</artifactId>
         </dependency>
 
+        <!-- Jackson JSR310 para soporte de java.time.Instant en tests -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <scope>test</scope>
+        </dependency>
+
         <!-- 
             Spring Boot DevTools: Permite recarga automática del proyecto (hot reload),
             útil solo en desarrollo. No se recomienda en producción. 
