fix: Agregar dependencia jackson-datatype-jsr310 a todos los módulos

--- a/ms-grades/pom.xml
+++ b/ms-grades/pom.xml
@@ -94,11 +94,10 @@
             <artifactId>spring-boot-starter-hateoas</artifactId>
         </dependency>
 
-        <!-- Jackson JSR310 para soporte de java.time.Instant en tests -->
+        <!-- Jackson JSR310 para soporte de java.time.Instant -->
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
-            <scope>test</scope>
         </dependency>
 
         <!-- 
