--- a/ms-payments/pom.xml
+++ b/ms-payments/pom.xml
@@ -110,6 +110,12 @@
             <artifactId>spring-boot-starter-hateoas</artifactId>
         </dependency>
 
+        <!-- Jackson JSR310 para soporte de java.time.Instant -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+        </dependency>
+
         <!-- 
             Spring Boot DevTools: Permite recarga automática del proyecto (hot reload),
             útil solo en desarrollo. No se recomienda en producción. 
