feat: Completar documentación y configuración del proyecto EduTech, incluyendo pruebas unitarias, HATEOAS, y scripts de verificación

--- a/ms-grades/src/main/resources/application.yml
+++ b/ms-grades/src/main/resources/application.yml
@@ -20,6 +20,11 @@ spring:
       ddl-auto: update
     database: mysql
     database-platform: org.hibernate.dialect.MySQL8Dialect
+  jackson:
+    serialization:
+      write-dates-as-timestamps: false
+    deserialization:
+      fail-on-unknown-properties: false
 
 eureka:
   client:
