feat: Enhance Maven configuration for testing and reporting
- Added Maven Surefire Plugin configuration for detailed HTML reports in ms-support and ms-users modules.
- Introduced Maven Surefire Report Plugin for generating HTML reports.
- Implemented reporting section in the parent pom.xml for aggregated test reports.
- Created RoleServiceTest class with comprehensive unit tests for RoleService.
- Updated pom.xml to include Caffeine and Spring Boot Starter Test dependencies.
- Added batch scripts for running tests with detailed reports and verifying navigation across modules.
- Created index.md for project documentation and site.xml for site generation.
- Implemented extensive testing script for thorough analysis of all entities.
- Added verification script to ensure all module sites are accessible.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,86 @@
+# ============================================
+# EDUTECH CLASSROOM - GITIGNORE COMPLETO
+# ============================================
+
 # Ignore Monolitico project and its contents
 Monolitico/
 
-# Ignore documentation and debug files
+# Maven build artifacts
+target/
+!*/target/site/index.html
+!*/target/site/surefire-report.html
+!target/site/index.html
+
+# IDE files
+.idea/
+.vscode/
+*.iml
+*.ipr
+*.iws
+.project
+.classpath
+.settings/
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Log files
+*.log
+hs_err_pid*.log
+
+# Temporary files
+*.tmp
+*.temp
+*.bak
+*~
+
+# Java compiled classes
+*.class
+
+# Maven wrapper files (optional - uncomment if not needed)
+# .mvn/
+# mvnw
+# mvnw.cmd
+
+# Documentation obsoleta y archivos de desarrollo
 GUIA_RESOLUCION.md
 REORGANIZATION_SUMMARY.md
 DEBUG_LOG.md
 INFORME_PRUEBAS_UNITARIAS.md
+COMANDOS_VERIFICACION.md
+ESTADO_PROYECTO.md
+
+# Scripts de desarrollo temporales
+fix-annotation-processors.bat
+test-*.bat
+quick-test.bat
+verificacion-*.bat
+test-runner.bat
+test-integration.bat
+test-entities-detailed.bat
+test-all-modules.bat
+
+# Reportes duplicados o obsoletos
+REPORTE_EXTENSIVO_COMPLETO.md
+
+# Archivos de configuración local
+*.properties.local
+application-local.yml
+
+# Node modules si hay frontend
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Package managers
+*.lock
+
+# Database files
+*.db
+*.sqlite
+
+# Configuraciones específicas del entorno
+.env
+.env.local
