Add comprehensive integration and unit tests for Course, Enrollment, CourseComment, and CourseContent controllers
- Implemented CourseCommentControllerTest with tests for CRUD operations and retrieval by course/user.
- Created CourseControllerTest covering all endpoints for course management.
- Developed EnrollmentControllerTest for enrollment operations including retrieval by student/course.
- Added integration tests for CourseCategory, CourseComment, CourseContent, and Enrollment to validate HATEOAS responses.
- Configured application-test.yml for in-memory H2 database setup for testing.

--- a/ms-courses/pom.xml
+++ b/ms-courses/pom.xml
@@ -86,6 +86,13 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- Base de datos H2 en memoria para testing -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>test</scope>
+        </dependency>
+
         <!-- 
             Dependencia para habilitar este módulo como cliente de Eureka.
             Permite que este microservicio se registre automáticamente en el servidor Eureka
